# trivialcode

./: .gitignore  .gitignore.swp  README.md
android/AndroidCameraDemo/: .gitignore
android/AndroidCameraDemo/app/src/main/java/com/sam/androidcamerademo/: MainActivity.java
android/AndroidCameraDemo/gradle/wrapper/: gradle-wrapper.properties
android/BeatBox/app/: build.gradle
android/BeatBox/app/src/androidTest/java/com/sammei/android/beatbox/: ExampleInstrumentedTest.java
android/BeatBox/app/src/main/: AndroidManifest.xml
android/BeatBox/app/src/main/java/com/sammei/android/beatbox/: BeatBox.java  BeatBoxActivity.java  BeatBoxFragment.java  SingleFragmentActivity.java  Sound.java
android/BeatBox/app/src/main/res/drawable/: button_beat_box_normal.xml  button_beat_box_pressed.xml
android/BeatBox/app/src/main/res/layout/: list_item_sound.xml
android/BeatBox/app/src/main/res/values/: styles.xml
android/BeatBox/app/src/test/java/com/sammei/android/beatbox/: ExampleUnitTest.java
android/Criminallntent/app/: build.gradle
android/Criminallntent/app/src/androidTest/java/com/sammei/android/criminallntent/: ExampleInstrumentedTest.java
android/Criminallntent/app/src/main/: AndroidManifest.xml
android/Criminallntent/app/src/main/java/com/sammei/android/criminallntent/: Crime.java  CrimeActivity.java  CrimeFragment.java  CrimeLab.java  CrimeListActivity.java  CrimeListFragment.java  CrimePagerActivity.java  DatePickerFragment.java  PictureUtils.java  SingleFragmentActivity.java  TimePickerFragment.java
android/Criminallntent/app/src/main/res/layout/: activity_crime.xml  activity_twopane.xml  dialog_time.xml  framment_crime.xml  list_item_crime.xml  view_camera_and_title.xml
android/Criminallntent/app/src/main/res/layout-land/: framment_crime.xml
android/Criminallntent/app/src/main/res/menu/: fragment_crime.xml  fragment_crime_list.xml
android/Criminallntent/app/src/main/res/values/: strings.xml
android/Criminallntent/app/src/test/java/com/sammei/android/criminallntent/: ExampleUnitTest.java
android/DragAndDraw/app/: build.gradle
android/DragAndDraw/app/src/androidTest/java/com/sammei/android/draganddraw/: ExampleInstrumentedTest.java
android/DragAndDraw/app/src/main/: AndroidManifest.xml
android/DragAndDraw/app/src/main/java/com/sammei/android/draganddraw/: Box.java  BoxDrawingView.java  DragAndDrawActivity.java  DragAndDrawFragment.java  SingleFragmentActivity.java
android/DragAndDraw/app/src/main/res/layout/: fragment_drag_and_draw.xml
android/DragAndDraw/app/src/test/java/com/sammei/android/draganddraw/: ExampleUnitTest.java
android/GeoQuiz/app/: build.gradle
android/GeoQuiz/app/src/androidTest/java/com/sammei/geoquiz/: ExampleInstrumentedTest.java
android/GeoQuiz/app/src/main/: AndroidManifest.xml
android/GeoQuiz/app/src/main/java/com/sammei/geoquiz/: CheatActivity.java  Question.java  QuizActivity.java
android/GeoQuiz/app/src/main/res/layout/: activity_cheat.xml  activity_quiz.xml  content_cheat.xml
android/GeoQuiz/app/src/main/res/layout-land/: activity_quiz.xml
android/GeoQuiz/app/src/main/res/values/: strings.xml
android/GeoQuiz/app/src/test/java/com/sammei/geoquiz/: ExampleUnitTest.java
android/NerdLauncher/app/: build.gradle
android/NerdLauncher/app/src/androidTest/java/com/sammei/android/nerdlauncher/: ExampleInstrumentedTest.java
android/NerdLauncher/app/src/main/: AndroidManifest.xml
android/NerdLauncher/app/src/main/java/com/sammei/android/nerdlauncher/: NerdLauncherActivity.java  NerdLauncherFragment.java  SingleFragmentActivity.java
android/PhotoGallery/app/: build.gradle
android/PhotoGallery/app/src/main/: AndroidManifest.xml
android/PhotoGallery/app/src/main/res/layout/: activity_photo_gallery.xml  fragment_photo_page.xml
android/PhotoGallery/app/src/main/res/menu/: fragment_photo_gallery.xml
android/Sunset/app/: build.gradle
android/Sunset/app/src/main/: AndroidManifest.xml
android/Sunset/app/src/main/res/layout/: activity_sunset.xml  fragment_sunset.xml
base_encode/: base64.c
bytebuffer/: CMakeLists.txt  README.md  basictypes.h  bytebuffer.cc  bytebuffer.h  bytebuffer_unittest.cc  byteorder_unittest.cc
crypto/des/: CMakeLists.txt  des.c  des.h  main.c
java/: Welcome.java
lua/: t.lua
p2p/stun/: CMakeLists.txt  main.c  stun.c  stun_msg.h
python/: 3.py  4.py  ATserial.py  at.py  echo.py  echosock.py  n10.py  rawat.py  test.py  uart.py
totp/: Makefile  main.c
webrtc/: CMakeLists.txt  test_event.cc  test_taskqueue.cc
(+24 files in other folders)
